--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <div class="medium-container">
                 <div class="black-content-inner">
                     <div class="black-content-photo">
-                        <img src="images/black-image.png" />
+                        <img src="images/wellness-g0778c1dcb_1920.jpg" />
                     </div>
                     <div class="black-content-text">
                         <div class="black-content-text-inner">
