--- a/massages.html
+++ b/massages.html
@@ -62,7 +62,7 @@
         <div class="base-container">
             <div class="slider-inner">
                 <div class="slider-photo">
-                    <img src="./images/background-2.jpg" alt="" />
+                    <img src="./images/hydrangea-ge63aa2546_1920.jpg" alt="" />
                 </div>
                 <div class="slider-content">
                     <span class="marker">Beauty studio</span>
@@ -74,7 +74,7 @@
     </div>
 
     <div class="base-container">
-        <div class="text-center">
+        <div class="text-center margin-bottom">
             <h2>Let's get into it</h2>
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit. In rutrum. Quisque tincidunt
             scelerisque
