Add lot of changes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="css/modules/gallery.css">
     <link rel="stylesheet" href="css/modules/content-image.css">
     <link rel="stylesheet" href="css/modules/slider.css">
+    <link rel="stylesheet" href="css/modules/benefits.css">
+    <link rel="stylesheet" href="css/modules/photo-section.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,7 +37,7 @@
         <div class="base-container">
             <div class="header">
                 <div class="header-logo">
-                    <a href="file:///C:/Users/Marta/Desktop/jelinkova/index.html">
+                    <a href="file:///C:/Users/Marta/Desktop/test/jelinkova/index.html">
                         <img src="images/massage-logo-2.jpg" alt="Logo-massages">
                     </a>
                 </div>
@@ -51,7 +53,7 @@
                                 <li><a href="/">Sport Massage</a></li>
                             </ul> -->
                         </li>
-                        
+
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="/">Blog</a></li>
                         <li><a href="pricing.html">Pricing</a></li>
@@ -92,7 +94,7 @@
                         A unique place
                     </div>
                     <div class="benefit-item-content-text">
-                        Jedinečné relaxační masáže, máslem s mákem 
+                        Jedinečné relaxační masáže
                     </div>
                 </div>
                 <div class="benefit-item-photo">
@@ -118,7 +120,7 @@
                         Special offers
                     </div>
                     <div class="benefit-item-content-text">
-                        Hovna s mákem zdarma, mák nemůžete vyndat
+                        Jedinečné relaxační masáže
                     </div>
                 </div>
                 <div class="benefit-item-photo">
@@ -290,54 +292,95 @@
         </div>
     </div>
 
-    <div class="base-container">
-        <div class="gallery-container-wrapper" data-gallery-container>
-            <h2 class="text-center">MY WORK</h2>
-            <div class="gallery-container">
-                <div class="gallery-item">
-                    <img src="images/gallery-item.jpg">
+    <div class="header-space"></div>
+
+    <div class="benefits-coffee-wrapper ">
+        <div class="base-container">
+            <div class="benefits-container">
+                <div class="benefits-item reverse-item">
+                    <div class="benefits-item-content">
+                        <div class="benefits-item-content-title">
+                            Styling
+                        </div>
+                        <div class="benefits-item-content-text">
+                            Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo
+                            sagittis suscipit ultrices.
+                        </div>
+                    </div>
+                    <div class="benefits-item-photo">
+                        <img src="./images/benefits.jpg" alt="">
+                    </div>
                 </div>
-                <div class="gallery-item">
-                    <img src="images/gallery-item-7.jpg">
+                <div class="benefits-item reverse-item">
+                    <div class="benefits-item-content">
+                        <div class="benefits-item-content-title">
+                            Haircut
+                        </div>
+                        <div class="benefits-item-content-text">
+                            Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo
+                            sagittis suscipit ultrices.
+                        </div>
+                    </div>
+                    <div class="benefits-item-photo">
+                        <img src="./images/benefits.jpg" alt="">
+                    </div>
                 </div>
-                <div class="gallery-item">
-                    <img src="images/gallery-item-6.jpg">
+                <div class="benefits-item">
+                    <div class="benefits-item-content background-white">
+                        <div class="benefits-item-content-title">
+                            Color
+                        </div>
+                        <div class="benefits-item-content-text">
+                            Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo
+                            sagittis suscipit ultrices.
+                        </div>
+                    </div>
+                    <div class="benefits-item-photo">
+                        <img src="./images/benefits.jpg" alt="">
+                    </div>
                 </div>
-                <div class="gallery-item">
-                    <img src="images/gallery-item-4.jpg">
+                <div class="benefits-item">
+                    <div class="benefits-item-content">
+                        <div class="benefits-item-content-title">
+                            Specials
+                        </div>
+                        <div class="benefits-item-content-text">
+                            Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo
+                            sagittis suscipit ultrices.
+                        </div>
+                    </div>
+                    <div class="benefits-item-photo">
+                        <img src="./images/benefits.jpg" alt="">
+                    </div>
                 </div>
-                <div class="gallery-item">
-                    <img src="images/gallery-item-3.jpg">
-                </div>
-                <div class="gallery-item">
-                    <img src="images/gallery-item-8.jpg">
-                </div>
-                <div class="gallery-item">
-                    <img src="images/gallery-item-5.jpg">
-                </div>
-                <div class="gallery-item">
-                    <img src="images/gallery-item-2.jpg">
-                </div>
-                <div class="gallery-item">
-                    <img src="images/gallery-item-9.jpg">
-                </div>
-                <div class="gallery-item">
-                    <img src="images/gallery-item-6.jpg">
-                </div>
-                <div class="gallery-item">
-                    <img src="images/gallery-item-2.jpg">
-                </div>
-                <div class="gallery-item">
-                    <img src="images/gallery-item-3.jpg">
-                </div>
-            </div>
-            <div class="gallery-btn text-center">
-                <a class="btn btn-primary" data-gallery-button>View more</a>
             </div>
         </div>
     </div>
 
-    <footer>
+    <div class="photo-section-wrapper">
+        <div class="base-container">
+            <div class="photo-section-container">
+                <div class="photo-section-item">
+                    <div class="photo-section-content">
+                        <div class="photo-section-content-inner">
+                            <h2>Welcome!</h2>
+                            Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc. Sample
+                            text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc. Sample text.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc.
+                            <div class="photo-section-content-cta">
+                                <a class="btn btn-default" href="#">Learn more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="photo-section-image">
+                        <img src="./images/back-massage.jpg" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <footer>
         <div class="base-container">
             <div class="footer-inner">
                 <div class="footer-top">
@@ -387,6 +430,60 @@
                     <div class="copyright-item">
                         <p>created by MHA</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </footer> -->
+
+    <footer>
+        <div class="footer-top">
+            <div class="base-container">
+                <div class="footer-top-inner">
+                    <div class="footer-top-content">
+                        <h2>Where to find us</h2>
+                        Praha
+                        <h2>Follow us</h2>
+                        <div class="social-container">
+                            <a class="social-item"
+                                href="https://nicepage.com/templates/preview/exceptional-beauty-service-1292320?device=desktop"
+                                target="_blank">
+                                <img src="./images/icons8-facebook.svg" />
+                            </a>
+                            <a class="social-item"
+                                href="https://nicepage.com/templates/preview/exceptional-beauty-service-1292320?device=desktop"
+                                target="_blank">
+                                <img src="./images/icons8-instagram.svg" />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="footer-top-image">
+                        <img src="./images/footer-photo.jpg" alt="" />
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-middle">
+            <div class="base-container">
+                <div class="footer-middle-inner">
+                    <div class="footer-middle-col">
+                        <h3>Nadpis</h3>
+                        <a href="./massages.html">Massages</a>
+                    </div>
+                    <div class="footer-middle-col">
+                        <h3>Nadpis</h3>
+                        <a href="./gallery.html">Gallery</a>
+                    </div>
+                    <div class="footer-middle-col">
+                        <h3>Nadpis</h3>
+                        <a href="./pricing.html">Pricing</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copy">
+            <div class="base-container">
+                <div class="footer-copy-inner">
+                    © created by Marta | 2022
                 </div>
             </div>
         </div>
