--- a/massages.html
+++ b/massages.html
@@ -231,55 +231,54 @@
     </div>
 
     <footer>
-        <div class="base-container">
-            <div class="footer-inner">
-                <div class="footer-top">
-                    <div class="footer-top-column">
-                        <ul>
-                            <li><a href="/">Contacts</a></li>
-                            <li><a href="/">GDPR</a></li>
-                            <li><a href="/">Privacy policy</a></li>
-                        </ul>
+        <div class="footer-top">
+            <div class="base-container">
+                <div class="footer-top-inner">
+                    <div class="footer-top-content">
+                        <h2>Where to find us</h2>
+                        Praha
+                        <h2>Follow us</h2>
+                        <div class="social-container">
+                            <a class="social-item"
+                                href="https://nicepage.com/templates/preview/exceptional-beauty-service-1292320?device=desktop"
+                                target="_blank">
+                                <img src="./images/icons8-facebook.svg" />
+                            </a>
+                            <a class="social-item"
+                                href="https://nicepage.com/templates/preview/exceptional-beauty-service-1292320?device=desktop"
+                                target="_blank">
+                                <img src="./images/icons8-instagram.svg" />
+                            </a>
+                        </div>
                     </div>
-                    <div class="footer-top-column">
-                        <ul>
-                            <li><a href="/">Contacts</a></li>
-                            <li><a href="/">GDPR</a></li>
-                            <li><a href="/">Privacy policy</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-top-column">
-                        <ul>
-                            <li><a href="/">Lorem</a></li>
-                            <li><a href="/">Lorem</a></li>
-                            <li><a href="/">Lorem</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="footer-certification">
-                    <div class="certification-item">
-                        <img src="./images/certification-icon.png" alt="certification icon" />
-                    </div>
-                    <div class="certification-item">
-                        <img src="./images/certification-icon.png" alt="certification icon" />
-                    </div>
-                    <div class="certification-item">
-                        <img src="./images/certification-icon.png" alt="certification icon" />
-                    </div>
-                    <div class="certification-item">
-                        <img src="./images/certification-icon.png" alt="certification icon" />
+                    <div class="footer-top-image">
+                        <img src="./images/footer-photo.jpg" alt="" />
                     </div>
                 </div>
-                <div class="footer-copyright">
-                    <div class="copyright-item">
-                        <p>Copyright ©</p>
+            </div>
+        </div>
+        <div class="footer-middle">
+            <div class="base-container">
+                <div class="footer-middle-inner">
+                    <div class="footer-middle-col">
+                        <h3>Nadpis</h3>
+                        <a href="./massages.html">Massages</a>
                     </div>
-                    <div class="copyright-item">
-                        <img src="./images/massage-logo-icon.png" alt="massage-logo">
+                    <div class="footer-middle-col">
+                        <h3>Nadpis</h3>
+                        <a href="./gallery.html">Gallery</a>
                     </div>
-                    <div class="copyright-item">
-                        <p>created by MHA</p>
+                    <div class="footer-middle-col">
+                        <h3>Nadpis</h3>
+                        <a href="./pricing.html">Pricing</a>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copy">
+            <div class="base-container">
+                <div class="footer-copy-inner">
+                    © created by Marta | 2022
                 </div>
             </div>
         </div>
